# SLAM_Editor

./: .gitignore  README.md  map  map.json  map.yaml  map_full  test.pgm  test.yaml  test2.pgm  test2.yaml
SLAM_Editor/: CMakeLists.txt  MyPaint.pro  SLAM_Editor.pro  canvasView.cpp  canvasView.h  canvasscene.cpp  canvasscene.h  door.cpp  door.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qnode.cpp  qnode.h  sensor.cpp  sensor.h
SLAM_Editor/upload/: JSON.py  PGM.py
SLAM_Editor_Debug/: SLAM_Editor  h_withIcons
build-SLAM_Editor-5-Debug/: SLAM_Editor  _full
build-SLAM_Editor-Desktop-Debug/: SLAM_Editor
yamltest/: README.md
yamltest/build-yamltest-Desktop-Debug/: yamltest
yamltest/yamltest/: main.cpp  yamltest.pro
yamltest/yamltest/data/: con.yaml
